--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@ https://www.mangaeden.com/api</description>
 		<repository>
 			<id>github</id>
 			<name>GitHub codingotaku Apache Maven Packages</name>
-			<url>https://maven.pkg.github.com/codingotaku/JEdenManga</url>
+			<url>https://maven.pkg.github.com/codingotaku/api</url>
 		</repository>
 	</distributionManagement>
 	<build>
@@ -20,10 +20,10 @@ https://www.mangaeden.com/api</description>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.7.0</version>
+				<version>3.8.1</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>13</source>
+					<target>13</target>
 				</configuration>
 			</plugin>
 		</plugins>
